feat: llama.cpp and vLLM library handlers
BREAKING CHANGE: java 25 required